--- a/src/lib/i18n/en.json
+++ b/src/lib/i18n/en.json
@@ -1,4 +1,4 @@
 {
-  "description": "I'm currently a student at the University of Paderborn studying Computer Science as a Bachelor.\n\nI'm working at the [Flying Circus](https://flyingcircus.io/) doing mainly [Nix/NixOS](https://nixos.org/) and some [Python](https://www.python.org/) development right now.\n\nOutside of work I do frontend development with [Svelte](https://svelte.dev/) and backend development with [Rust](https://www.rust-lang.org/) or [Node.js](https://nodejs.org/).\n\nMy Résumé is avaliable in [German](https://cv.eliko.ga/cv/de) and [English](https://cv.eliko.ga/cv/en).",
+  "description": "I'm currently a student at the University of Paderborn studying Computer Science as a Bachelor.\n\nI'm working at the [Flying Circus](https://flyingcircus.io/) doing mainly [Nix/NixOS](https://nixos.org/) and some [Python](https://www.python.org/) development right now.\n\nRight now I'm building [Thymis](https://thymis.io/), a device-management software for NixOS Devices.\n\nMy Résumé is avaliable in [German](https://cv.eliko.ga/cv/de) and [English](https://cv.eliko.ga/cv/en).",
   "subtitle": "I build things, write code and solve problems."
 }
